<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#061C39">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="100dp"
            android:id="@+id/image_view"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_movie_white_48dp" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view"
            android:orientation="vertical">

            <EditText
                android:id="@+id/personal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"
                android:hint="@string/personalinformation"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/course_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"
                android:hint="@string/coursedetails"
                android:textSize="20sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:hint="@string/feesdetails"
                android:id="@+id/fees_details"
                android:textColorHint="@color/grey"
                android:textColor="@color/white" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/documentDeatils"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"
                android:id="@+id/document_details" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/examdetails"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"
                android:id="@+id/exam_details"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bookdetails"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"
                android:id="@+id/book_details"/>
            <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hallticketdetails"
            android:textColorHint="@color/grey"
            android:textColor="@color/white"
            android:id="@+id/hall_details1"
            />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox"
                android:text="I agree to T and Cs"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout"
            android:layout_marginTop="50dp"
            android:id="@+id/button_layout">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_register"
                android:text="@string/register"
                android:background="@color/orange" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>




